src/parse/snapshots/blis__parse__lexer__tests__test_programs__err_parse__missing_semicolon.blis.tokens.snap
---
source: src/parse/lexer.rs
description: "println(\"Hello, World\")\n"
input_file: test_programs/err_parse/missing_semicolon.blis
---
[
  Lexeme(
    token: Identifier,
    text: "println",
    line: 1,
  ),
  Lexeme(
    token: LeftParen,
    text: "(",
    line: 1,
  ),
  Lexeme(
    token: String,
    text: "\"Hello, World\"",
    line: 1,
  ),
  Lexeme(
    token: RightParen,
    text: ")",
    line: 1,
  ),
  Lexeme(
    token: Eof,
    text: "",
    line: 2,
  ),
]
