src/parse/snapshots/blis__parse__lexer__tests__test_programs__err_parse__missing_semicolon_type.blis.tokens.snap
---
source: src/parse/lexer.rs
description: "type T // needs `;` or `with { ... }`\n"
input_file: test_programs/err_parse/missing_semicolon_type.blis
---
[
  Lexeme(
    token: Type,
    text: "type",
    line: 1,
  ),
  Lexeme(
    token: Identifier,
    text: "T",
    line: 1,
  ),
  Lexeme(
    token: Eof,
    text: "",
    line: 2,
  ),
]
